--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         selected files: <span id="fileNum">0</span>;
         total size: <span id="fileSize">0</span>
     </div>
-    <input type="submit" value="submit" id="submit" />
+    <input type="submit" value="Submit" id="submit" />
  </form>
- <button id='testButton'>Click Me!</button>
+ <button id='testButton'>Test Button!</button>
 
  <script>
     function updateSize() {
